--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -7,7 +7,7 @@
     repo: deb http://sensu.global.ssl.fastly.net/apt sensu main
     update_cache: yes
 
-name: be sure sensu is installed
+- name: be sure sensu is installed
   apt:
     name: sensu
     state: latest
