--- a/.travis.yml
+++ b/.travis.yml
@@ -62,5 +62,17 @@ after_failure:
   #placeholder Check MySQL settings.
   #- 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm cat /var/log/mysql/error.log'
 
+#notifications:
+#  webhooks: https://galaxy.ansible.com/api/v1/notifications/
 notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  slack:
+    on_success: always
+    on_failure: always
+    rooms:
+      - gbckenya:YmOMhqL9O6UHSSG1vrdkQXkL#general
+      - gbckenya:YmOMhqL9O6UHSSG1vrdkQXkL#ansible
+  email:
+    recipients:
+      - me@buluma.me.ke
+    on_success: always # default: change
+    on_failure: always # default: always
