--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 ---
-sudo: required
+#sudo: required
+group: deprecated-2017Q2
 
 env:
   global:
     # https://github.com/travis-ci/travis-ci/issues/6461#issuecomment-239577306
-    DOCKER_VERSION: "1.9.1-0~trusty"
+#    DOCKER_VERSION: "1.9.1-0~trusty"
   matrix:
     - distro: centos7
       init: /usr/lib/systemd/systemd
