--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ notifications:
     on_failure: always
     rooms:
       - buluma:QWpyLHvuvJe5aduZtGs7euUa#general
-      - buluma:QWpyLHvuvJe5aduZtGs7euUa#ansible
+      - buluma:QWpyLHvuvJe5aduZtGs7euUa#travis-ci
   email:
     recipients:
       - me@buluma.me.ke
