--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ services:
 before_install:
   # Downgrade to older version of Docker engine.
   - sudo apt-get update
-  - sudo apt-get remove docker-engine -yq
+  # - sudo apt-get remove docker-engine -yq
+  - sudo apt-get remove docker-engine -q
   # - sudo apt-get install docker-engine=$DOCKER_VERSION -yq --no-install-suggests --no-install-recommends --force-yes -o Dpkg::Options::="--force-confnew"
   - sudo apt=get install docker-engine=1.9.1-0~trusty -yq --no-install-suggests --no-install-recommends --force-yes -o Dpkg::Options::="--force-confnew"
   # Pull container
