--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   # - sudo apt-get remove docker-engine -yq
   - sudo apt-get remove docker-engine -q
   # - sudo apt-get install docker-engine=$DOCKER_VERSION -yq --no-install-suggests --no-install-recommends --force-yes -o Dpkg::Options::="--force-confnew"
-  - sudo apt=get install docker-engine=1.9.1-0~trusty -yq --no-install-suggests --no-install-recommends --force-yes -o Dpkg::Options::="--force-confnew"
+  - sudo apt=get install docker-engine=1.9.1-0~trusty -q --no-install-suggests --no-install-recommends --force-yes -o Dpkg::Options::="--force-confnew"
   # Pull container
   - 'sudo docker pull geerlingguy/docker-${distro}-ansible:latest'
 
