--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,14 @@ env:
       init: /lib/systemd/systemd
       run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
       playbook: test.yml
+    - distro: ubuntu1404
+      init: /sbin/init
+      run_opts: ""
+      playbook: test.yml
+    - distro: ubuntu1204
+      init: /sbin/init
+      run_opts: ""
+      playbook: test.yml
 
 services:
   - docker
