--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,13 +1,13 @@
-- name: be sure sensu apt repository key is deployed
-  apt_key:
+# - name: be sure sensu apt repository key is deployed
+#   apt_key:
 #     url: http://sensu.global.ssl.fastly.net/apt/pubkey.gpg EOL
-    url: https://eol-repositories.sensuapp.org/apt/pubkey.gpg
+#     url: https://eol-repositories.sensuapp.org/apt/pubkey.gpg
 
-- name: be sure sensu apt repository is deployed
-  apt_repository:
+# - name: be sure sensu apt repository is deployed
+#   apt_repository:
 #     repo: deb http://sensu.global.ssl.fastly.net/apt sensu main EOL
-    repo: deb https://eol-repositories.sensuapp.org/apt {{ ansible_distribution_release }} main
-    update_cache: yes
+#     repo: deb https://eol-repositories.sensuapp.org/apt {{ ansible_distribution_release }} main
+#     update_cache: yes
 
 - name: be sure sensu is installed
   apt:
