--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,5 +10,5 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         env:
           GHR_COMPRESS: xz
-          GHR_PATH: build/
+          GHR_PATH: .
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
